2004-02-09  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* packages/freebsd: update
	* doc/README.ru: update

2004-02-05  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: fix support gcc<3.0
	* src/gate/rfc2ftn.c: fix disable FIDO_STYLE_MSGID
	    (thanks to Andrew Porohin)

2004-02-02  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* acconfig.h: change rfc_lvl_1
	* src/toss/runinc.c: add ftpin, uuin support
	    (thanks to Andrew Zhuravlev)

2004-01-31  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* packages/freebsd: update freebsd port
	* src/common/msgid.c: change log() to fglog()

2004-01-30  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/old/FIDOGATE_ftrack: add ftrack FAQ(thanks
	    to Andrew Zhuravlev)
	* configure.in: add --with-lockdir(thanks to
	    Andrew Zhuravlev)

2004-01-29  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/rfcheader.c: fix rfc_lvl_3

2004-01-28  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/old/FAQ_Fidogate: add old fidogate FAQ

2004-01-27  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/tick/ftntick.c: fix logging TickFileAction
	* src: change log() to fglog()
	* src/gate/rfc2ftn.c: fix generate MSGID
	* config.h.in: change FTN_RFC_HEADERS,
	    RFC_LVL_1_HEADERS, RFC_LVL_3_HEADERS

2004-01-25  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: change disable AF_AVAIL

2004-01-20  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/gate/rfc2ftn.c: fix disable FIDO_STYLE_MSGID
	* src/include/prototypes.h: fix disable FIDO_STYLE_MSGID
	* src/common/msgid.c: fix disable FIDO_STYLE_MSGID

2004-01-19  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/gate/rfc2ftn.c: fix disable FIDO_STYLE_MSGID
	* src/areafix/areafix.c: fix AF_AVAIL, fix disable
	    AF_AVAIL

2004-01-12  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/examples: fixes
