@@ -1,3 +1,8 @@
+2004-02-11  Andrey Slusar <rusfidogate@users.sourceforge.net>
+
+	* src/tick/ftntick.c: fix the AutoCreateFileechoLine
+	    problem
+
 2004-02-09  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
 	* packages/freebsd: update
